feat(api): remove aggregation from query
