# api/openapi.yaml
@@ -148,59 +148,11 @@ paths:
         - Meters
       parameters:
         - $ref: "#/components/parameters/meterIdOrSlug"
-        - name: from
-          in: query
-          required: false
-          description: |
-            Start date-time in RFC 3339 format in UTC timezone.
-            Must be aligned with the window size.
-            Inclusive.
-          schema:
-            type: string
-            format: date-time
-        - name: to
-          in: query
-          required: false
-          description: |
-            End date-time in RFC 3339 format in UTC timezone.
-            Must be aligned with the window size.
-            Inclusive.
-          schema:
-            type: string
-            format: date-time
-        - name: windowSize
-          in: query
-          required: false
-          description: |
-            If not specified, a single usage aggregate will be returned for the entirety of the specified period for each subject and group.
-          schema:
-            $ref: "#/components/schemas/WindowSize"
-        - name: aggregation
-          in: query
-          required: false
-          deprecated: true
-          description: |
-            If not specified, OpenMeter will use the default aggregation type.
-            As OpenMeter stores aggregates defined by meter config, passing a different aggregate can lead to inaccurate results.
-            For example getting the MIN of SUMs.
-          schema:
-            $ref: "#/components/schemas/MeterAggregation"
-        - name: subject
-          in: query
-          required: false
-          schema:
-            type: array
-            items:
-              type: string
-        - name: groupBy
-          in: query
-          required: false
-          description: |
-            If not specified a single aggregate will be returned for each subject and time window.
-          schema:
-            type: array
-            items:
-              type: string
+        - $ref: "#/components/parameters/queryFrom"
+        - $ref: "#/components/parameters/queryTo"
+        - $ref: "#/components/parameters/queryWindowSize"
+        - $ref: "#/components/parameters/querySubject"
+        - $ref: "#/components/parameters/queryGroupBy"
       responses:
         "200":
           description: OK
@@ -489,6 +441,54 @@ components:
       required: true
       schema:
         $ref: "#/components/schemas/IdOrSlug"
+    queryFrom:
+      name: from
+      in: query
+      required: false
+      description: |
+        Start date-time in RFC 3339 format in UTC timezone.
+        Must be aligned with the window size.
+        Inclusive.
+      schema:
+        type: string
+        format: date-time
+    queryTo:
+      name: to
+      in: query
+      required: false
+      description: |
+        End date-time in RFC 3339 format in UTC timezone.
+        Must be aligned with the window size.
+        Inclusive.
+      schema:
+        type: string
+        format: date-time
+    queryWindowSize:
+      name: windowSize
+      in: query
+      required: false
+      description: |
+        If not specified, a single usage aggregate will be returned for the entirety of the specified period for each subject and group.
+      schema:
+        $ref: "#/components/schemas/WindowSize"
+    querySubject:
+      name: subject
+      in: query
+      required: false
+      schema:
+        type: array
+        items:
+          type: string
+    queryGroupBy:
+      name: groupBy
+      in: query
+      required: false
+      description: |
+        If not specified a single aggregate will be returned for each subject and time window.
+      schema:
+        type: array
+        items:
+          type: string
 
   responses:
     BadRequestProblemResponse:
